[package]
name = "gateway-poc"
version = "0.1.4"
edition = "2021"
authors = ["hephaex@gmail.com"]
description = "Kubernetes Gateway API Implementation Comparison Tool"
license = "GPL-3.0"
repository = "https://github.com/hephaex/k8s_vGateway"
readme = "README.md"
keywords = ["kubernetes", "gateway-api", "testing", "kubevirt"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Kubernetes
kube = { version = "0.87", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
csv = "1.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
rand = "0.9"
dirs = "6.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC (optional)
tonic = { version = "0.10", optional = true }
prost = { version = "0.14", optional = true }

[dev-dependencies]
tempfile = "3.23.0"
tokio-test = "0.4"

[features]
default = []
grpc = ["tonic", "prost"]

[[bin]]
name = "gateway-poc"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
